# glm-rs

./: Cargo.toml
src/: basenum.rs  cast.rs  lib.rs  traits.rs
src/builtin/: common.rs  exp.rs  geom.rs  integer.rs  matrix.rs  mod.rs  noise.rs  pack.rs  trig.rs  vecrel.rs
src/ext/: common.rs  consts.rs  exp.rs  geom.rs  mod.rs  trig.rs
src/ext/matrix/: mod.rs  transform.rs
src/mat/: ctor.rs  mat.rs  sqmat.rs  traits.rs
src/vec/: swizzle.rs  traits.rs  vec.rs
