[package]

name = "glm"
version = "0.3.0"
edition = "2024"
authors = [
    "Che Kenan <chekenan@gmail.com>",
    "Nerijus Arlauskas <nercury@gmail.com>",
    "Fredrik Norén",
    "Cameron Hart <https://github.com/bitshifter>",
    "human9 <https://github.com/human9>",
    "JokelBaf <https://github.com/JokelBaf>",
]

description = "GLSL mathematics for Rust."
keywords = ["glm", "math", "opengl", "glsl"]
license = "MIT"
repository = "https://github.com/JokelBaf/glm-rs/"

[dependencies]
rand = "^0.4"
num = "^0.4"
quickcheck = "^0.9.0"
